add: font-family

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     background-color: rgb(202, 220, 235);
     text-align: center;
+    font-family: "Robot",sans-serif;
 }
 .center{
     height: 370px;
